fix: breadcrumb overflow

--- a/editor-components/banner/banner6/banner6.module.scss
+++ b/editor-components/banner/banner6/banner6.module.scss
@@ -45,19 +45,20 @@
                 display: flex;
                 align-items: center;
                 max-width: 100%;
-
+                gap: var(--composer-gap-xs);
                 .home,.current{
                     overflow: hidden;
                     display: -webkit-box;
                     -webkit-box-orient: vertical;
                     -webkit-line-clamp: 5;
                     text-overflow: ellipsis;
+                    margin: 0px;
+                    min-width: 50px;
+                    white-space: normal;
                 }
 
                 .home {
                     color: var(--composer-font-color-primary);
-                    margin-right: var(--composer-gap-sm);
-                    min-width: fit-content;
                     &:hover {
                         transition: color 0.3 ease;
                         color: var(--composer-primary-color);
@@ -65,11 +66,11 @@
                 }
                 .icon {
                     color: var(--composer-font-color-primary);
-                    margin-right: var(--composer-gap-sm);
-                    min-width: 1rem;
+                    min-width: 20px;
+                    width: 20px;
+                    height: 20px;
                 }
                 .current {
-                    min-width: fit-content;
                     color: var(--composer-primary-color);
                 }
             }
